# quoFEM

./: CMakeLists.txt  WorkflowApp_quoFEM.cpp  conanfile.py  conanfile2.py  main.cpp  makeDMG_arm.sh  makeDMG_x86.sh  makeMac.sh  quoFEM.pro  requirements.txt
Examples/qfem-0031/src/: DSS_quad_DispControlModified.tcl
Examples/qfem-0032/src/: N10_T3_ModifiedCase1.tcl
Examples/qfem-0033/src/: DSS_quad_DispControlModified.tcl
